tests/NormalTests/paczka1/small_fuzzy/29160177.err
Error in line 1: XB7ia03rn S684 81,0
Error in line 12: Lwi36Gk S760 2,1
